[package]
name = "miniq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume="0.10"
chrono="0.4"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version="1", features=["full"]}
tokio-stream = "0.1"
tonic="0.6"
prost="0.9"
prost-types = "0.9"
futures="0.3"
dotenv="0.15"

[build-dependencies]
tonic-build="0.6"